Prevent article links from breaking at whitespace

--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ article {
     padding: 16px;
 }
 
+article a {
+    white-space: nowrap;
+}
+
 footer {
     padding: 16px;
     background-color: #ffffff;
